Bug 1619314 - Improve visibility of mobile protection icons in high contrast mode. r=ntim
Differential Revision: https://phabricator.services.mozilla.com/D68701

UltraBlame original commit: 8d117a8992b108deeac3fae51fe16e6509a16d1a

--- a/browser/components/protections/content/protections.css
+++ b/browser/components/protections/content/protections.css
@@ -828,14 +828,6 @@ card
 icon
 .
 dark
-.
-mobile
--
-app
--
-icon
-.
-dark
 a
 .
 hidden
@@ -1114,34 +1106,6 @@ etp
 -
 card
 .
-icon
-.
-light
-{
-display
-:
-none
-;
-}
-.
-mobile
--
-app
--
-icon
-.
-dark
-{
-display
-:
-block
-;
-}
-.
-mobile
--
-app
--
 icon
 .
 light
@@ -3721,14 +3685,6 @@ gap
 ;
 }
 .
-lockwise
--
-mobile
--
-app
--
-icon
-.
 mobile
 -
 app
@@ -3742,6 +3698,19 @@ height
 width
 :
 auto
+;
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
+fill
+:
+currentColor
 ;
 }
 #
